Former-commit-id: 70b95920a22aa9b3d58c365d8a11f34abe3b5330

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -567,7 +567,7 @@ ENUM_STATE_RELEASED = Freigegeben
 
 ENUM_STATE_SUBMITTED = Eingestellt
 
-ENUM_STATE_WITHDRAWN = Zur\u00FCckgezogen
+ENUM_STATE_WITHDRAWN = Verworfen
 
 ENUM_VISIBILITY_AUDIENCE = Eingeschr\u00E4nkt
 
@@ -877,9 +877,9 @@ ItemList_SortOrderDescending = absteigend
 
 ItemList_Total = Insgesamt:
 
-ItemList_filterAllExceptPendingWithdrawn = Alle (au\u00DFer schwebend und zur\u00FCckgezogen)
+ItemList_filterAllExceptPendingWithdrawn = Alle (au\u00DFer schwebend und verworfen)
 
-ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer zur\u00FCckgezogen)
+ItemList_filterAllExceptWithdrawn = Alle (au\u00DFer verworfen)
 
 ItemList_of = von
 
@@ -1280,9 +1280,9 @@ ViewItemFull_lblVisibility = Visibility
 
 ViewItemFull_lblWithdrawalComment = Kommentar
 
-ViewItemFull_lblWithdrawalDate = Datum des Zur\u00FCckziehens
+ViewItemFull_lblWithdrawalDate = Datum des Verwerfens
 
-ViewItemFull_lblWithdrawn = Zur\u00FCckgezogen
+ViewItemFull_lblWithdrawn = Verworfen
 
 ViewItemFull_lblnameOfCollection = Name der Collection
 
@@ -1307,7 +1307,7 @@ ViewItemLog_lblSubmit = Eingestellt am
 
 ViewItemLog_lblUpdate = \u00DCberarbeitet am 
 
-ViewItemLog_lblWithdraw = Zur\u00FCckgezogen am
+ViewItemLog_lblWithdraw = Verworfen am
 
 ViewItemMedium_lblAffiliations = Affiliations
 
@@ -1581,7 +1581,7 @@ ViewItem_lblToc1 = Inhaltsverzeichnis:
 
 ViewItem_lblTotalNumberOfPages1 = Gesamtseitenzahl:
 
-ViewItem_lblWithdrawalComment = Zur\u00FCckgezogen
+ViewItem_lblWithdrawalComment = Verworfen
 
 ViewItem_lkAPA = APA
 
@@ -1619,7 +1619,7 @@ ViewItem_lnkTocMore = aufklappen...
 
 ViewLocalTagsPage = lokaler Tag
 
-WithdrawItemPage = Datensatz zur\u00FCckziehen
+WithdrawItemPage = Datensatz verwerfen
 
 #
 # JUS-specific labels END
@@ -1629,7 +1629,7 @@ WithdrawItemPage = Datensatz zur\u00FCckziehen
 #
 WithdrawItem_lblBasic = Basic
 
-WithdrawItem_lblComment = Kommentar zum Zur\u00FCckziehen
+WithdrawItem_lblComment = Kommentar zum Verwerfen
 
 WithdrawItem_lnkCancel = Abbrechen
 
@@ -1637,7 +1637,7 @@ WithdrawItem_lnkCreator = Urheber
 
 WithdrawItem_lnkPublication = Ver\u00F6ffentlichung
 
-WithdrawItem_lnkWithdraw = Zur\u00FCckziehen
+WithdrawItem_lnkWithdraw = Verwerfen
 
 WorkspacesPage = Arbeitsbereiche
 
@@ -1716,7 +1716,7 @@ actionMenu_lnkSubmit = Einstellen
 
 actionMenu_lnkView = Ansehen
 
-actionMenu_lnkWithdraw = Zur\u00FCckziehen
+actionMenu_lnkWithdraw = Verwerfen
 
 add = Hinzuf\u00FCgen
 
