--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -214,7 +214,7 @@ ViewItemFull_submitted = Dieser Datensatz ist eingestellt. Letzte Nachricht:
 
 ViewItemFull_user_has_no_context = Sie haben keine Privilegien um Datens\u00E4tze anzulegen.
 
-ViewItemFull_withdrawn = Dieser Datensatz wurde zur\u00FCckgezogen!
+ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 
 #
 # View Item
@@ -284,7 +284,7 @@ depositorWS_ManyItemsSelected = Bitte w\u00E4hlen Sie einen einzelnen Datensatz 
 
 depositorWS_NoItemSelected = Bitte w\u00E4hlen Sie einen Datensatz aus.
 
-depositorWS_NoWithdrawalCommentGiven = Bitte geben Sie einen Kommentar zum Zur\u00FCckziehen Ihres Datensatzes an.
+depositorWS_NoWithdrawalCommentGiven = Bitte geben Sie einen Kommentar zum Verwerfen Ihres Datensatzes an.
 
 depositorWS_NotSuccessfullySubmitted = Der Datensatz kann nicht eingestellt werden, da er den Regeln f\u00FCrs Einstellen nicht entspricht.
 
@@ -300,7 +300,7 @@ depositorWS_SuccessfullySaved = Der Datensatz wurde gespeichert.
 
 depositorWS_SuccessfullySubmitted = Der Datensatz wurde eingestellt.
 
-depositorWS_SuccessfullyWithdrawn = Der Datensatz wurde zur\u00FCckgezogen.
+depositorWS_SuccessfullyWithdrawn = Der Datensatz wurde verworfen.
 
 depositorWS_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
