Former-commit-id: c3bd1908e7eeda4a365078296d0d864da22c8d04

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -566,7 +566,7 @@ ENUM_STATE_RELEASED = Released
 
 ENUM_STATE_SUBMITTED = Submitted
 
-ENUM_STATE_WITHDRAWN = Withdrawn
+ENUM_STATE_WITHDRAWN = Discarded
 
 ENUM_VISIBILITY_AUDIENCE = Restricted
 
@@ -876,9 +876,9 @@ ItemList_SortOrderDescending = descending
 
 ItemList_Total = Total:
 
-ItemList_filterAllExceptPendingWithdrawn = All (except pending and withdrawn)
+ItemList_filterAllExceptPendingWithdrawn = All (except pending and discarded)
 
-ItemList_filterAllExceptWithdrawn = All (except withdrawn)
+ItemList_filterAllExceptWithdrawn = All (except discarded)
 
 ItemList_of = of
 
@@ -1282,9 +1282,9 @@ ViewItemFull_lblVisibility = Visibility
 
 ViewItemFull_lblWithdrawalComment = Comment
 
-ViewItemFull_lblWithdrawalDate = Date of Withdrawal
+ViewItemFull_lblWithdrawalDate = Date of Discard
 
-ViewItemFull_lblWithdrawn = Withdrawn
+ViewItemFull_lblWithdrawn = Discarded
 
 ViewItemFull_lblnameOfCollection = Name of Collection
 
@@ -1309,7 +1309,7 @@ ViewItemLog_lblSubmit = Submitted on
 
 ViewItemLog_lblUpdate = Updated on 
 
-ViewItemLog_lblWithdraw = Withdrawn on 
+ViewItemLog_lblWithdraw = Discarded on 
 
 ViewItemMedium_lblAffiliations = Affiliations
 
@@ -1583,7 +1583,7 @@ ViewItem_lblToc1 = Table of content:
 
 ViewItem_lblTotalNumberOfPages1 = Total number of pages:
 
-ViewItem_lblWithdrawalComment = Withdrawn
+ViewItem_lblWithdrawalComment = Discarded
 
 ViewItem_lkAPA = APA
 
@@ -1621,14 +1621,14 @@ ViewItem_lnkTocMore = expand...
 
 ViewLocalTagsPage = Local Tags
 
-WithdrawItemPage = Withdraw item
+WithdrawItemPage = Discard item
 
 #
 # Withdraw
 #
 WithdrawItem_lblBasic = Basic
 
-WithdrawItem_lblComment = Withdrawal Comment
+WithdrawItem_lblComment = Discard Comment
 
 WithdrawItem_lnkCancel = Cancel
 
@@ -1636,7 +1636,7 @@ WithdrawItem_lnkCreator = Creator
 
 WithdrawItem_lnkPublication = Publication
 
-WithdrawItem_lnkWithdraw = Withdraw
+WithdrawItem_lnkWithdraw = Discard
 
 WorkspacesPage = Workspaces
 
@@ -1715,7 +1715,7 @@ actionMenu_lnkSubmit = Submit
 
 actionMenu_lnkView = View
 
-actionMenu_lnkWithdraw = Withdraw
+actionMenu_lnkWithdraw = Discard
 
 add = Add
 
