--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -220,7 +220,7 @@ ViewItemFull_submitted = This item is submitted! Last message:
 
 ViewItemFull_user_has_no_context = You do not have privileges to create an item.
 
-ViewItemFull_withdrawn = This item is withdrawn!
+ViewItemFull_withdrawn = This item is discarded!
 
 #
 # View Item
@@ -290,7 +290,7 @@ depositorWS_ManyItemsSelected = Please select a single item.
 
 depositorWS_NoItemSelected = Please select an item.
 
-depositorWS_NoWithdrawalCommentGiven = Please provide a withdrawal comment.
+depositorWS_NoWithdrawalCommentGiven = Please provide a discard comment.
 
 depositorWS_NotSuccessfullySubmitted = The item can not be submitted because it does not conform to the validation rules defined for submission.
 
@@ -306,7 +306,7 @@ depositorWS_SuccessfullySaved = The item has been saved.
 
 depositorWS_SuccessfullySubmitted = The item has been submitted.
 
-depositorWS_SuccessfullyWithdrawn = The item has been withdrawn.
+depositorWS_SuccessfullyWithdrawn = The item has been discarded.
 
 depositorWS_deleteConfirmation = Do you really want to delete this item?
 
