--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -939,15 +939,13 @@ LoginErrorPage = Login Status
 
 MultipleImportForm = Importparameter
 
-MultipleImport_configuration = [NEW] Import configuration
+MultipleImport_configuration = Import Konfiguration
 
 NewMultipleImport = Massenimport
 
 NoSearchResultListPage = keine Treffer
 
 NoSearchResultsPage = Keine Treffer
-
-Parameter = [NEW] Parameter
 
 Pubman_browserTitle = PubMan
 
@@ -1233,7 +1231,7 @@ ViewItemFull_lblSourceIdentifier = Identifikator
 
 ViewItemFull_lblSourcePlace = Ort
 
-ViewItemFull_lblSourcePubInfo = Verlag, Ort, Ausgabe
+ViewItemFull_lblSourcePubInfo = Ort, Verlag, Ausgabe
 
 ViewItemFull_lblSourceSequenceNo = Artikelnummer
 
@@ -1643,43 +1641,43 @@ WorkspacesPage = Arbeitsbereiche
 
 Year = Jahr
 
-YearbookCandidatesPage = [NEW] Kandidaten
+YearbookCandidatesPage = Kandidaten
 
-YearbookInvalidItemsPage = [NEW] Ung\u00FCltige Datens\u00E4tze\u0009
+YearbookInvalidItemsPage = Validierungsergebnis
 
-YearbookItemCreatePage = [NEW] Erstelle Jahrbuch
+YearbookItemCreatePage = Jahrbuch erstellen
 
-YearbookMembersPage = [NEW] Mitglieder
+YearbookMembersPage = Mitglieder
 
-YearbookModeratorPage = [NEW ]Jahrb\u00FCcher Verwaltung
+YearbookModeratorPage = Jahrbuchverwaltung
 
-YearbookNonCandidatesPage = [NEW] Andere
+YearbookNonCandidatesPage = \u00DCbrige Datens\u00E4tze
 
-YearbookPage = [NEW] Jahrbuch
+YearbookPage = Jahrbuch
 
-Yearbook_addToYearbook = [NEW] Dem Jahrbuch hinzuf\u00FCgen
+Yearbook_addToYearbook = Auswahl dem Jahrbuch hinzuf\u00FCgen
 
-Yearbook_collaboratorUserIds = [NEW] W\u00E4hlen Sie Nutzer ihrer Organisation, die neben Ihnen auch am Jahrbuch arbeiten d\u00FCrfen
+Yearbook_collaboratorUserIds = W\u00E4hlen Sie weitere Nutzer ihres Instituts, die au\u00DFer Ihnen das Jahrbuch bearbeiten d\u00FCrfen (optional)
 
-Yearbook_contextIds = [NEW]  Sammlungen
+Yearbook_contextIds = Collections
 
-Yearbook_createYearbook = [NEW] Erstelle Jahrbuch
+Yearbook_createYearbook = Jahrbuch erstellen
 
-Yearbook_date = [NEW] Jahrbuch Datumsgrenzen
+Yearbook_date = Zeitrahmen
 
-Yearbook_member = [NEW] Mitglied
+Yearbook_member = Mitglied
 
-Yearbook_organization = [NEW] Jahrbuch Organisation
+Yearbook_organization = Organisation
 
-Yearbook_releaseYearbook = [NEW] Jahrbuch freigeben
+Yearbook_releaseYearbook = Jahrbuch abschlie\u00DFen
 
-Yearbook_removeFromYearbook = [NEW] Aus dem Jahrbuch entfernen
+Yearbook_removeFromYearbook = Auswahl aus dem Jahrbuch entfernen
 
-Yearbook_title = [NEW] Jahrbuch Titel
+Yearbook_title = Titel
 
-Yearbook_validate = [NEW] Validieren
+Yearbook_validate = Validieren
 
-Yearbook_validationMessageHeader = [NEW] Jahrbuch Validierungsinformationen
+Yearbook_validationMessageHeader = Jahrbuch Validierung
 
 about = \u00DCber PubMan
 
@@ -1957,7 +1955,7 @@ chooseWorkspace_descQAWorkspace = Beschreibung QA Bereich Deutsch.
 
 chooseWorkspace_descReportWorkspace = Beschreibung  Report Bereich Deutsch.
 
-chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Beschreibung Jahrbuch Moderator Bereich Deutsch.
+chooseWorkspace_descYearbookModeratorWorkspace = Beschreibung Jahrbuch Moderator Bereich Deutsch.
 
 chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
 
