--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -918,15 +918,13 @@ LoginErrorPage = \u30ED\u30B0\u30A4\u30F3\u72B6\u614B
 
 MultipleImportForm = \u4E00\u62EC\u767B\u9332\u6761\u4EF6\u306E\u6307\u5B9A
 
-MultipleImport_configuration = [NEW] Import configuration
+MultipleImport_configuration = Import configuration
 
 NewMultipleImport = \u4E00\u62EC\u767B\u9332
 
 NoSearchResultListPage = \u691C\u7D22\u7D50\u679C0\u4EF6
 
 NoSearchResultsPage = \u691C\u7D22\u7D50\u679C0\u4EF6
-
-Parameter = [NEW] Parameter
 
 Pubman_browserTitle = PubMan
 
@@ -1616,43 +1614,43 @@ WorkspacesPage = Workspaces
 
 Year = \u520A\u884C\u5E74
 
-YearbookCandidatesPage = [NEW] Candidates
+YearbookCandidatesPage = Candidates
 
-YearbookInvalidItemsPage = [NEW] Invalid Items
+YearbookInvalidItemsPage = Validation Result
 
-YearbookItemCreatePage = [NEW] Create Yearbook
+YearbookItemCreatePage = Create Yearbook
 
-YearbookMembersPage = [NEW] Members
+YearbookMembersPage = Members
 
-YearbookModeratorPage = [NEW ]Yearbook Admin
+YearbookModeratorPage = Yearbook Admin
 
-YearbookNonCandidatesPage = [NEW] Non Candidates
+YearbookNonCandidatesPage = Non Candidates
 
-YearbookPage = [NEW] Yearbook
+YearbookPage = Yearbook
 
-Yearbook_addToYearbook = [NEW] Add to Yearbook
+Yearbook_addToYearbook = Add selected to Yearbook
 
-Yearbook_collaboratorUserIds = [NEW] Choose users from your organisation who are allowed to collaborate on the yearbook.
+Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
-Yearbook_contextIds = [NEW] Collections
+Yearbook_contextIds = Collections
 
-Yearbook_createYearbook = [NEW] Create Yearbook
+Yearbook_createYearbook = Create Yearbook
 
-Yearbook_date = [NEW] Yearbbok Date Lines
+Yearbook_date = Time Frame
 
-Yearbook_member = [NEW] Member
+Yearbook_member = Member
 
-Yearbook_organization = [NEW] Yearbook Organization
+Yearbook_organization = Organization
 
-Yearbook_releaseYearbook = [NEW] Release Yearbook
+Yearbook_releaseYearbook = Close Yearbook
 
-Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
+Yearbook_removeFromYearbook = Remove selected from Yearbook
 
-Yearbook_title = [NEW] Yearbook Title
+Yearbook_title = Title
 
-Yearbook_validate = [NEW] Validate
+Yearbook_validate = Validate
 
-Yearbook_validationMessageHeader = [NEW] Yearbook Validation Messages
+Yearbook_validationMessageHeader = Yearbook Validation
 
 about = PubMan\u306B\u3064\u3044\u3066
 
@@ -1930,7 +1928,7 @@ chooseWorkspace_descQAWorkspace = Description QA Workspace Japanese.
 
 chooseWorkspace_descReportWorkspace = Description Report Workspace Japanese.
 
-chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Description Yearbook Moderator Workspace Japanese
+chooseWorkspace_descYearbookModeratorWorkspace = Description Yearbook Moderator Workspace Japanese
 
 chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Japanese.
 
