--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -51,7 +51,7 @@ ConfirmRollbackItemVersion = Wollen Sie die aktuelle Version mit dieser Version 
 
 CreatorFamilyNameNotProvided = Der Nachname des Urhebers muss noch angegeben werden.
 
-CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
+CreatorGivennameNotProvided = Der Urheber ben\u00F6tigt einen Vornamen
 
 CreatorNotProvided = Es muss mindestens ein Urheber eingegeben werden.
 
@@ -59,7 +59,7 @@ CreatorOrganizationNameNotProvided = Ein Organisationsname muss noch angegeben w
 
 CreatorRoleNotProvided = Die Rolle des Urhebers muss angegeben werden.
 
-DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+DateAcceptedNotProvided = Es muss ein Annahmedatum angegeben werden
 
 DateFormatIncorrect = Alle Datumsangaben m\u00FCssen einem der folgenden Formate entsprechen: JJJJ oder JJJJ-MM oder JJJJ-MM-TT.
 
@@ -77,7 +77,7 @@ EnglishAbstractNotProvided = Ein Abstract in Englisch muss eingegeben werden.
 
 EntryIsNotANumber = Die Organisationsnummer bei einem Ersteller ist kein g\u00FCltiger Wert: "$1"
 
-EntryIsNotBound = [NEW] Die Organisationsnummer $1 ist an keine Person gebunden. Bitte f\u00FCgen Sie die Nummer einer Person hinzu oder entfernen Sie die Organisation.
+EntryIsNotBound = Die Organisationseinheit mit der Nummer $1 ist mit keiner Person verkn\u00FCpft. Bitte f\u00FCgen Sie die Nummer einer Person hinzu oder entfernen Sie die Organisationseinheit.
 
 EntryIsNotInValidRange = Die Organisationsnummer bei einem Ersteller ist nicht im g\u00FCltigen Bereich: "$1"
 
@@ -87,11 +87,11 @@ ErrorParsingCreatorString = Der angegebene Text ist leer oder konnte nicht erkan
 
 EventNotProvided = Wenn das Genre "Konferenzband", "Konferenzbeitrag", "Vortrag", "Konferenzbericht" oder "Lehrmaterial" ist, so muss eine Veranstaltung/Konferenz angegeben werden.
 
-EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+EventPlaceRequired = Der Ort der Veranstaltung muss angegeben werden.
 
 EventTitleNotProvided = Wenn Angaben zu einer Veranstaltung/Konferenz gemacht werden, muss ebenfalls ein Titel f\u00FCr die Veranstaltung/Konferenz angegeben werden.
 
-EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
+EventTitleRequired = Der Name der Veranstaltung muss angegeben werden.
 
 GenreNotProvided = Bitte geben Sie das Genre an.
 
@@ -122,13 +122,13 @@ MpdlCreatorRequired = Mindestens ein Autor muss entweder die MPDL selbst oder je
 
 NoConeJournal = Journal nicht in CONE. 
 
-NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+NoMaxPlanckAffiliation = Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
 
 NoPublicFileProvided = Es muss mindestens eine Datei mit der Zugangsbeschr\u00E4nkung "\u00F6ffentlich" hochgeladen werden.
 
-NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+NoSequenceInformationGiven = Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
 
-NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
+NoYearbookGenre = Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
 
 NumberOfPagesAssumed = Bitte geben Sie die Gesamtseitenzahl an.
 
@@ -140,15 +140,15 @@ PublisherNameNotProvided = Bei den Angaben zur Ver\u00F6ffentlichung des Inhalts
 
 PublisherNameSourceNotProvided = Bei den Angaben zur Ver\u00F6ffentlichung der Quelle fehlt der Name des Verlags.
 
-PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+PublisherNotProvided = Der Verlag muss angegeben werden.
 
-PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+PublisherPlaceNotProvided = Der Verlagsort muss angegeben werden.
 
-PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect1 = Mindestens ein Erscheinungsdatum muss das Jahr des Jahrbuchs haben
 
-PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect2 = Jedes Erscheinungsdatum sollte das Jahr des Jahrbuchs haben
 
-PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+PublishingDateNotProvided = Es muss ein Erscheinungsdatum angegeben werden.
 
 #
 # ReportWorkspace
@@ -165,17 +165,17 @@ ReviewMethodNotProvided = Wenn ein Erscheinungsdatum ausgef\u00FCllt ist, muss a
 
 SlashInFilename = Der Dateiname darf keinen Schr\u00E4gstrich "/" enthalten.
 
-SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+SourceCreatorFamilyNameNotProvided = Der Nachname des Urhebers der Quelle muss angegeben werden.
 
-SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+SourceCreatorGivennameNotProvided = Der Vorname des Urhebers der Quelle muss angeben werden.
 
-SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+SourceCreatorOrganizationNameNotProvided = Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
 
-SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
+SourceCreatorRoleInvalid = Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
 
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
 
-SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+SourceEditionNotProvided = Die Ausgabe der Quelle muss angegeben werden.
 
 SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
 
@@ -183,7 +183,7 @@ SourceNotProvided = Wenn das Genre "Zeitschriftenartikel", "Buchkapitel" oder "K
 
 SourceTitleNotProvided = Bei den Quellenangaben fehlt der Titel der Quelle.
 
-SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
+SourceVolumeNotProvided = Der Band der Quelle muss angegeben werden
 
 #
 # JUS BEGIN
@@ -198,7 +198,7 @@ StatisticsUpdatedDaily = Hinweis: Statistische Daten werden t\u00E4glich aktuali
 
 TitleNotProvided = Bitte geben Sie einen Titel ein.
 
-TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
+TotalNumberOfPagesNotProvided = Die Gesamtseitenzahl muss angegeben werden.
 
 UnknownLanguageCode = Der eingegebene Sprachcode existiert nicht in ISO639-3
 
@@ -221,29 +221,29 @@ ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
-Yearbook_AddedItemsToYearbook = [NEW] Datensatz erfolgreich zum Jahrbuch hinzugef\u00FCgt
+Yearbook_AddedItemsToYearbook = Datensatz/Datens\u00E4tze zum Jahrbuch hinzugef\u00FCgt
 
-Yearbook_ErrorAddingMembers = [NEW] Fehler beim Hinzuf\u00FCgen
+Yearbook_ErrorAddingMembers = Fehler beim Hinzuf\u00FCgen von Datens\u00E4tzen
 
-Yearbook_ErrorRemovingMembers = [NEW] Fehler beim Entfernen des Datensatzes
+Yearbook_ErrorRemovingMembers = Fehler beim Entfernen der Datens\u00E4tze
 
-Yearbook_ItemAlreadyInYearbook = [NEW] Datensatz befindet sich bereits im Jahrbuch
+Yearbook_ItemAlreadyInYearbook = Datensatz befindet sich bereits im Jahrbuch
 
-Yearbook_ItemInvalid = [NEW] Datensatz $1 ist ung\u00FCltig.
+Yearbook_ItemInvalid = Datensatz $1 ist ung\u00FCltig.
 
-Yearbook_ReleaseError = [NEW] Jahrbuch konnte nicht freigegben werden
+Yearbook_ReleaseError = Fehler beim Schlie\u00DFen des Jahrbuchs
 
-Yearbook_ReleasedSuccessfully = [NEW] Jahrbuch wurde erfolgreich freigegben.
+Yearbook_ReleasedSuccessfully = Jahrbuch wurde erfolgreich geschlossen.
 
-Yearbook_RemovedItemsFromYearbook = [NEW] Datensatz erfolgreich aus dem Jahrbuch entfernt
+Yearbook_RemovedItemsFromYearbook = Datensatz/Datens\u00E4tze aus dem Jahrbuch entfernt
 
-Yearbook_createdSuccessfully = [NEW] Jahrbuch wurde erfolgreich erstellt und kann nun bef\u00FCllt werden
+Yearbook_createdSuccessfully = Jahrbuch wurde erfolgreich erstellt und kann nun bef\u00FCllt werden
 
-Yearbook_creationError = [NEW] Fehler beim Erstellen des Jahrbuchs. Bitte probieren Sie es sp\u00E4ter noch einmal oder kantaktieren Sie den Pubman Support.
+Yearbook_creationError = Fehler beim Erstellen des Jahrbuchs. Bitte probieren Sie es sp\u00E4ter noch einmal oder kantaktieren Sie den Pubman Support.
 
-Yearbook_grantsAdded = [NEW] Rechte f\u00FCr weitere Nutzer wurden erfolgfreich erstellt
+Yearbook_grantsAdded = Rechte f\u00FCr weitere Nutzer wurden erfolgfreich erstellt
 
-Yearbook_noYearbookFound = [NEW] Es wurde kein Jahrbuch f\u00FCr Ihre Organisation gefunden
+Yearbook_noYearbookFound = Es wurde kein Jahrbuch f\u00FCr Ihr Institut gefunden
 
 basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
 
