--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -52,7 +52,7 @@ ComponentVisibilityNotProvided = Falta la especificaci\u00F3n de la visibilidad 
 
 CreatorFamilyNameNotProvided = No se ha proporcionado el apellido del creador.
 
-CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
+CreatorGivennameNotProvided = The given name of the creator must be provided.
 
 CreatorNotProvided = Se requiere al menos un creador.
 
@@ -60,7 +60,7 @@ CreatorOrganizationNameNotProvided = No se ha proporcionado un nombre de Organiz
 
 CreatorRoleNotProvided = No se ha proporcionado un rol de creador.
 
-DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+DateAcceptedNotProvided = Date accepted must be provided
 
 DateFormatIncorrect = Una fecha introducida no est\u00E1 en alguno de los formatos siguientes:YYYY or YYYY-MM o YYYY-MM-DD.
 
@@ -72,17 +72,17 @@ EndDateWithoutStartDate = Si se proporciona una fecha de inicio de un evento es 
 
 EnglishAbstractNotProvided = Tiene que proporcionar un resumen en "ingl\u00E9s".
 
-EntryIsNotBound = [NEW] The affiliation number $1 is not bound to any creator. Please add a creator for this affiliation or remove the affiliation.
+EntryIsNotBound = The affiliation number $1 is not linked to any creator. Please add a creator for this affiliation or remove the affiliation.
 
 ErrorParsingCreatorString = La cadena de autor est\u00E1 vac\u00EDa o no pudo ser analizada correctamente.
 
 EventNotProvided = Si el g\u00E9nero es igual a "Actas", "Presentaci\u00F3n a Congresos" "Charla en un evento", "Informe de Conferencia" o "Ense\u00F1anza", es necesario proporcionar un evento.
 
-EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+EventPlaceRequired = The place of event must be provided
 
 EventTitleNotProvided = Si se introducen fechas de evento, es necesario introducir tambi\u00E9n un t\u00EDtulo de evento.
 
-EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
+EventTitleRequired = The event title must be provided
 
 GenreNotProvided = Por favor, especifique el G\u00E9nero.
 
@@ -105,13 +105,13 @@ MpdlCreatorRequired = Al menos un autor debe pertenecer a la EOI o estar afiliad
 
 NoDDCKeyword = La palabra clave introducida no es conforme con la clasificaci\u00F3n DDC.
 
-NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+NoMaxPlanckAffiliation = At least one creator must have an affiliation within the Max Planck Society
 
 NoPublicFileProvided = Se debe cargar al menos un fichero con visibilidad "p\u00FAblica" para este item.
 
-NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+NoSequenceInformationGiven = Either the sequence number or startpage and endpage must be provided
 
-NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
+NoYearbookGenre = The genre is no valid yearbook genre
 
 NumberOfPagesAssumed = Se acepta el n\u00FAmero de p\u00E1ginas.
 
@@ -121,15 +121,15 @@ OrganizationalMetadataNotProvided = Al menos un creador necesita una unidad orga
 
 PublisherNameNotProvided = Se ha introducido informaci\u00F3n de publicaci\u00F3n sin un editor.
 
-PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+PublisherNotProvided = Publisher must be provided
 
-PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+PublisherPlaceNotProvided = Publishing place must be provided
 
-PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook
 
-PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook
 
-PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+PublishingDateNotProvided = At least one publishing date must be provided
 
 #
 # ReportWorkspace
@@ -144,17 +144,17 @@ ReviewMethodInternalNotProvided = El M\u00E9todo de Revisi\u00F3n tiene que tene
 
 ReviewMethodNotProvided = Si se ha introducido una fecha para el tipo "publicaci\u00F3n impresa", se debe proporcionar el tipo de revisi\u00F3n.
 
-SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+SourceCreatorFamilyNameNotProvided = The family name of the source creator must be provided.
 
-SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+SourceCreatorGivennameNotProvided = The given name of the source creator must be provided.
 
-SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+SourceCreatorOrganizationNameNotProvided = The name of the source creator (organization) must be provided
 
-SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
+SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = No se ha proporcionado el rol de creador de una fuente.
 
-SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+SourceEditionNotProvided = The edition of the source must be provided
 
 SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe introducirse tambi\u00E9n un g\u00E9nero de fuente.
 
@@ -162,13 +162,13 @@ SourceNotProvided = Si el g\u00E9nero es igual a "Art\u00EDculo de revista", "Ca
 
 SourceTitleNotProvided = Se ha introducido informaci\u00F3n de fuente sin un t\u00EDtulo de fuente.
 
-SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
+SourceVolumeNotProvided = The volume of the source must be provided
 
 StatisticsUpdatedDaily = Atenci\u00F3n: Los datos estad\u00EDsticos se actualizan diariamente.
 
 TitleNotProvided = Se requiere un t\u00EDtulo.
 
-TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
+TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
 UploadFileNotProvided = NEW: Please select a file
 
@@ -187,29 +187,29 @@ ViewItemFull_withdrawn = \u00A1Este item ha sido retirado!
 #
 ViewItem_deleteConfirmation = \u00BFEst\u00E1 seguro de que quiere eliminar este item?
 
-Yearbook_AddedItemsToYearbook = [NEW] Item(s) successfully added to yearbook
+Yearbook_AddedItemsToYearbook = Item(s) added to yearbook
 
-Yearbook_ErrorAddingMembers = [NEW] Error while adding members
+Yearbook_ErrorAddingMembers = Error while adding members
 
-Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
+Yearbook_ErrorRemovingMembers = Error while removing members
 
-Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
+Yearbook_ItemAlreadyInYearbook = Item is already in Yearbook
 
-Yearbook_ItemInvalid = [NEW] Item $1 is invalid.
+Yearbook_ItemInvalid = Item $1 is invalid.
 
-Yearbook_ReleaseError = [NEW] Yearbook couldn't be released
+Yearbook_ReleaseError = Error while closing Yearbook
 
-Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
+Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
-Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
+Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
-Yearbook_createdSuccessfully = [NEW] Yearbook was created successfully and can now be filled with members
+Yearbook_createdSuccessfully = Yearbook was created successfully and can now be filled with members
 
-Yearbook_creationError = [NEW] Error while creating Yearbook. Please try again later or contact Pubman Support.
+Yearbook_creationError = Error while creating Yearbook. Please try again later or contact Pubman Support.
 
-Yearbook_grantsAdded = [NEW] Selected Users were authorized to collaborate on the Yearbook
+Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
 
-Yearbook_noYearbookFound = [NEW] No yearbook for your organization was found.
+Yearbook_noYearbookFound = No yearbook for your institute was found.
 
 basket_ItemsChanged = item(s) han cambiado su estado de forma que usted ya no est\u00E1 autorizado a ver la \u00FAltima versi\u00F3n. Estos items han sido retirados de su cesta temporalmente hasta que la \u00FAltima versi\u00F3n est\u00E9 disponible de nuevo.
 
