--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -929,15 +929,13 @@ LoginErrorPage = Estado de Login
 
 MultipleImportForm = Importar Par\u00E1metros
 
-MultipleImport_configuration = [NEW] Import configuration
+MultipleImport_configuration = Import configuration
 
 NewMultipleImport = Importaci\u00F3n M\u00FAltiple
 
 NoSearchResultListPage = No hay resultados de la b\u00FAsqueda
 
 NoSearchResultsPage = No hay resultados de la b\u00FAsqueda
-
-Parameter = [NEW] Parameter
 
 Pubman_browserTitle = PubMan
 
@@ -1629,43 +1627,43 @@ WithdrawItem_lnkWithdraw = Retirar
 
 WorkspacesPage = Workspaces
 
-YearbookCandidatesPage = [NEW] Candidates
+YearbookCandidatesPage = Candidates
 
-YearbookInvalidItemsPage = [NEW] Invalid Items
+YearbookInvalidItemsPage = Validation Result
 
-YearbookItemCreatePage = [NEW] Create Yearbook
+YearbookItemCreatePage = Create Yearbook
 
-YearbookMembersPage = [NEW] Members
+YearbookMembersPage = Members
 
-YearbookModeratorPage = [NEW ]Yearbook Admin
+YearbookModeratorPage = Yearbook Admin
 
-YearbookNonCandidatesPage = [NEW] Non Candidates
+YearbookNonCandidatesPage = Non Candidates
 
-YearbookPage = [NEW] Yearbook
+YearbookPage = Yearbook
 
-Yearbook_addToYearbook = [NEW] Add to Yearbook
+Yearbook_addToYearbook = Add selected to Yearbook
 
-Yearbook_collaboratorUserIds = [NEW] Choose users from your organisation who are allowed to collaborate on the yearbook.
+Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
-Yearbook_contextIds = [NEW] Collections
+Yearbook_contextIds = Collections
 
-Yearbook_createYearbook = [NEW] Create Yearbook
+Yearbook_createYearbook = Create Yearbook
 
-Yearbook_date = [NEW] Yearbbok Date Lines
+Yearbook_date = Time Frame
 
-Yearbook_member = [NEW] Member
+Yearbook_member = Member
 
-Yearbook_organization = [NEW] Yearbook Organization
+Yearbook_organization = Organization
 
-Yearbook_releaseYearbook = [NEW] Release Yearbook
+Yearbook_releaseYearbook = Close Yearbook
 
-Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
+Yearbook_removeFromYearbook = Remove selected from Yearbook
 
-Yearbook_title = [NEW] Yearbook Title
+Yearbook_title = Title
 
-Yearbook_validate = [NEW] Validate
+Yearbook_validate = Validate
 
-Yearbook_validationMessageHeader = [NEW] Yearbook Validation Messages
+Yearbook_validationMessageHeader = Yearbook Validation
 
 about = Sobre PubMan
 
@@ -1899,7 +1897,7 @@ chooseWorkspace_descQAWorkspace = Description QA Workspace Spanish.
 
 chooseWorkspace_descReportWorkspace = Description Report Workspace Spanish.
 
-chooseWorkspace_descYearbookModeratorWorkspace = [NEW] Description Yearbook Moderator Workspace Spanish
+chooseWorkspace_descYearbookModeratorWorkspace = Description Yearbook Moderator Workspace Spanish
 
 chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Spanish.
 
