--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -62,7 +62,7 @@ CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = A creator's role is not provided.
 
-DateAcceptedNotProvided = [NEW] The date of creation must be provided with the Thesis. 
+DateAcceptedNotProvided = Date accepted must be provided
 
 DateFormatIncorrect = An entered date is not in one of the following formats: YYYY or YYYY-MM or YYYY-MM-DD.
 
@@ -80,7 +80,7 @@ EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
 EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
 
-EntryIsNotBound = [NEW] The affiliation number $1 is not bound to any creator. Please add a creator for this affiliation or remove the affiliation.
+EntryIsNotBound = The affiliation number $1 is not linked to any creator. Please add a creator for this affiliation or remove the affiliation.
 
 EntryIsNotInValidRange = The affiliation number of a creator is not in the valid range: "$1"
 
@@ -90,11 +90,11 @@ ErrorParsingCreatorString = The given creator string is empty or couldn't be par
 
 EventNotProvided = If genre is equal to "Proceedings", "Conference Paper", "Talk at event", "Conference Report" or "Teaching", an event has to be provided.
 
-EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+EventPlaceRequired = The place of event must be provided
 
 EventTitleNotProvided = If event data are entered, an event title has to be given, too.
 
-EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
+EventTitleRequired = The event title must be provided
 
 GenreNotProvided = Please specify the Genre.
 
@@ -128,13 +128,13 @@ MpdlCreatorRequired = At least one author has to be the MPDL or affiliated to it
 
 NoConeJournal = No CONE Journal. 
 
-NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+NoMaxPlanckAffiliation = At least one creator must have an affiliation within the Max Planck Society
 
 NoPublicFileProvided = At least one file with visibility "public" has to be uploaded for the item.
 
-NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+NoSequenceInformationGiven = Either the sequence number or startpage and endpage must be provided
 
-NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
+NoYearbookGenre = The genre is no valid yearbook genre
 
 NumberOfPagesAssumed = Number of pages is assumed.
 
@@ -146,15 +146,15 @@ PublisherNameNotProvided = Publishing information was entered without a publishe
 
 PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
-PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+PublisherNotProvided = Publisher must be provided
 
-PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+PublisherPlaceNotProvided = Publishing place must be provided
 
-PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook
 
-PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook
 
-PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+PublishingDateNotProvided = At least one publishing date must be provided
 
 #
 # ReportWorkspace
@@ -171,17 +171,17 @@ ReviewMethodNotProvided = If a date of type "published in print" is given, the r
 
 SlashInFilename = The filename must not contain a slash "/".
 
-SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+SourceCreatorFamilyNameNotProvided = The family name of the source creator must be provided.
 
-SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+SourceCreatorGivennameNotProvided = The given name of the source creator must be provided.
 
-SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+SourceCreatorOrganizationNameNotProvided = The name of the source creator (organization) must be provided
 
-SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
+SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
 
-SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+SourceEditionNotProvided = The edition of the source must be provided
 
 SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
 
@@ -189,7 +189,7 @@ SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "C
 
 SourceTitleNotProvided = Source information was entered without a source title.
 
-SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
+SourceVolumeNotProvided = The volume of the source must be provided
 
 #
 # JUS BEGIN
@@ -204,7 +204,7 @@ StatisticsUpdatedDaily = Notice: The statistic data is updated on a daily basis.
 
 TitleNotProvided = Title is required.
 
-TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
+TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
 UnknownLanguageCode = The given language code does not exist in ISO639-3
 
@@ -227,29 +227,29 @@ ViewItemFull_withdrawn = This item is discarded!
 #
 ViewItem_deleteConfirmation = Do you really want to delete this item?
 
-Yearbook_AddedItemsToYearbook = [NEW] Item(s) successfully added to yearbook
+Yearbook_AddedItemsToYearbook = Item(s) added to yearbook
 
-Yearbook_ErrorAddingMembers = [NEW] Error while adding members
+Yearbook_ErrorAddingMembers = Error while adding members
 
-Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
+Yearbook_ErrorRemovingMembers = Error while removing members
 
-Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
+Yearbook_ItemAlreadyInYearbook = Item is already in Yearbook
 
-Yearbook_ItemInvalid = [NEW] Item $1 is invalid.
+Yearbook_ItemInvalid = Item $1 is invalid.
 
-Yearbook_ReleaseError = [NEW] Yearbook couldn't be released
+Yearbook_ReleaseError = Error while closing Yearbook
 
-Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
+Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
-Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
+Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
-Yearbook_createdSuccessfully = [NEW] Yearbook was created successfully and can now be filled with members
+Yearbook_createdSuccessfully = Yearbook was created successfully and can now be filled with members
 
-Yearbook_creationError = [NEW] Error while creating Yearbook. Please try again later or contact Pubman Support.
+Yearbook_creationError = Error while creating Yearbook. Please try again later or contact Pubman Support.
 
-Yearbook_grantsAdded = [NEW] Selected Users were authorized to collaborate on the Yearbook
+Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
 
-Yearbook_noYearbookFound = [NEW] No yearbook for your organization was found.
+Yearbook_noYearbookFound = No yearbook for your institute was found.
 
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available again.
 
