--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -54,7 +54,7 @@ ConfirmRollbackItemVersion = Do you wish to replace the current version with thi
 
 CreatorFamilyNameNotProvided = \u4F5C\u8005\u60C5\u5831\u306E\u3046\u3061\u59D3\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
+CreatorGivennameNotProvided = The given name of the creator must be provided.
 
 CreatorNotProvided = \u5C11\u306A\u304F\u3068\u30821\u540D\u5206\u306F\u4F5C\u8005\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
@@ -62,7 +62,7 @@ CreatorOrganizationNameNotProvided = An organizations name is not provided.
 
 CreatorRoleNotProvided = \u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-DateAcceptedNotProvided = [NEW] Bei einer Promotion muss eine Annahmedatum angegeben werden
+DateAcceptedNotProvided = Date accepted must be provided
 
 DateFormatIncorrect = An entered date is not in one of the following formats: YYYY or YYYY-MM or YYYY-MM-DD.
 
@@ -80,7 +80,7 @@ EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
 EntryIsNotANumber = The affiliation number of a creator is not valid: "$1"
 
-EntryIsNotBound = [NEW] The affiliation number $1 is not bound to any creator. Please add a creator for this affiliation or remove the affiliation.
+EntryIsNotBound = The affiliation number $1 is not linked to any creator. Please add a creator for this affiliation or remove the affiliation.
 
 EntryIsNotInValidRange = The affiliation number of a creator is in the valid range: "$1"
 
@@ -90,11 +90,11 @@ ErrorParsingCreatorString = The given creator string is empty or couldn't be par
 
 EventNotProvided = \u4F1A\u8B70\u8AD6\u6587\u3001\u4F1A\u8B70\u8AD6\u6587\u96C6\u3001\u8B1B\u6F14\u3001\u4F1A\u8B70\u5831\u544A\u66F8\u3001\u6559\u6750\u306E\u8CC7\u6599\u7A2E\u5225\u306E\u5834\u5408\u3001\u30A4\u30D9\u30F3\u30C8\u60C5\u5831\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
-EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+EventPlaceRequired = The place of event must be provided
 
 EventTitleNotProvided = \u30A4\u30D9\u30F3\u30C8\u60C5\u5831\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u304C\u3001\u30A4\u30D9\u30F3\u30C8\u540D\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
+EventTitleRequired = The event title must be provided
 
 GenreNotProvided = \u7A2E\u5225\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
@@ -125,13 +125,13 @@ MpdlCreatorRequired = \u5C11\u306A\u304F\u3068\u3082\u8457\u8005\u306E\u3046\u30
 
 NoConeJournal = No CONE Journal. 
 
-NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+NoMaxPlanckAffiliation = At least one creator must have an affiliation within the Max Planck Society
 
 NoPublicFileProvided = \u5C11\u306A\u304F\u3068\u30821\u3064\u4EE5\u4E0A\u306E\u516C\u958B\u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
-NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+NoSequenceInformationGiven = Either the sequence number or startpage and endpage must be provided
 
-NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
+NoYearbookGenre = The genre is no valid yearbook genre
 
 NumberOfPagesAssumed = Number of pages is assumed.
 
@@ -143,15 +143,15 @@ PublisherNameNotProvided = \u51FA\u7248\u8005\u60C5\u5831\u304C\u5165\u529B\u305
 
 PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
-PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+PublisherNotProvided = Publisher must be provided
 
-PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+PublisherPlaceNotProvided = Publishing place must be provided
 
-PublishingDateNotCorrect1 = [NEW] Mindestens ein Ver\u00F6ffentlichungsdatum muss das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect1 = At least one publishing date must have the year of the yearbook
 
-PublishingDateNotCorrect2 = [NEW] Jedes Ver\u00F6ffentlichungsdatum sollte das Jahr des Jahrbuchs haben
+PublishingDateNotCorrect2 = Every publishing date should have the year of the yearbook
 
-PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+PublishingDateNotProvided = At least one publishing date must be provided
 
 ReportNoItemsFound = [NEW] No publications found for the given institute and year.
 
@@ -168,17 +168,17 @@ ReviewMethodNotProvided = \u7D19\u7248\u51FA\u7248\u65E5\u3092\u5165\u529B\u3057
 
 SlashInFilename = \u30D5\u30A1\u30A4\u30EB\u540D\u306B\u30B9\u30E9\u30C3\u30B7\u30E5\u304C\u542B\u307E\u308C\u3066\u3044\u306A\u3044\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
-SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+SourceCreatorFamilyNameNotProvided = The family name of the source creator must be provided.
 
-SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+SourceCreatorGivennameNotProvided = The given name of the source creator must be provided.
 
-SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+SourceCreatorOrganizationNameNotProvided = The name of the source creator (organization) must be provided
 
-SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
+SourceCreatorRoleInvalid = The source creator must either be Author or Editor
 
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+SourceEditionNotProvided = The edition of the source must be provided
 
 SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
@@ -186,7 +186,7 @@ SourceNotProvided = \u300C\u5B66\u8853\u96D1\u8A8C\u300D\u300C\u66F8\u7C4D\u300D
 
 SourceTitleNotProvided = \u51FA\u7248\u7269\u540D\uFF08\u63B2\u8F09\u8A8C\u540D\u7B49\uFF09\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
-SourceVolumeNotProvided = [NEW] Der Band der Quelle muss angegeben werden
+SourceVolumeNotProvided = The volume of the source must be provided
 
 StartPageArticleRequiered = Start Page and End Page has to be provided for Journal Article. 
 
@@ -198,7 +198,7 @@ StatisticsUpdatedDaily = \ \u6CE8\u610F: \u5229\u7528\u7D71\u8A08\u30C7\u30FC\u3
 
 TitleNotProvided = \u30BF\u30A4\u30C8\u30EB\u60C5\u5831\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
-TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
+TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
 UnknownLanguageCode = The given language code does not exist in ISO639-3
 
@@ -221,29 +221,29 @@ ViewItemFull_withdrawn = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u53D6\u308A\
 #
 ViewItem_deleteConfirmation = \u672C\u5F53\u306B\u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u524A\u9664\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
 
-Yearbook_AddedItemsToYearbook = [NEW] Item(s) successfully added to yearbook
+Yearbook_AddedItemsToYearbook = Item(s) added to yearbook
 
-Yearbook_ErrorAddingMembers = [NEW] Error while adding members
+Yearbook_ErrorAddingMembers = Error while adding members
 
-Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
+Yearbook_ErrorRemovingMembers = Error while removing members
 
-Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
+Yearbook_ItemAlreadyInYearbook = Item is already in Yearbook
 
-Yearbook_ItemInvalid = [NEW] Item $1 is invalid.
+Yearbook_ItemInvalid = Item $1 is invalid.
 
-Yearbook_ReleaseError = [NEW] Yearbook couldn't be released
+Yearbook_ReleaseError = Error while closing Yearbook
 
-Yearbook_ReleasedSuccessfully = [NEW] Yearbook was released successfully.
+Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
-Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
+Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
-Yearbook_createdSuccessfully = [NEW] Yearbook was created successfully and can now be filled with members
+Yearbook_createdSuccessfully = Yearbook was created successfully and can now be filled with members
 
-Yearbook_creationError = [NEW] Error while creating Yearbook. Please try again later or contact Pubman Support.
+Yearbook_creationError = Error while creating Yearbook. Please try again later or contact Pubman Support.
 
-Yearbook_grantsAdded = [NEW] Selected Users were authorized to collaborate on the Yearbook
+Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
 
-Yearbook_noYearbookFound = [NEW] No yearbook for your organization was found.
+Yearbook_noYearbookFound = No yearbook for your institute was found.
 
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available agai
 
