Former-commit-id: 52d7f31c52917975daa7cd454f1a0d57eac952a0

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1657,6 +1657,8 @@ YearbookPage = Jahrbuch
 
 Yearbook_addToYearbook = Auswahl dem Jahrbuch hinzuf\u00FCgen
 
+Yearbook_addToYearbookViewItem = Dem Jahrbuch hinzuf\u00FCgen
+
 Yearbook_collaboratorUserIds = W\u00E4hlen Sie weitere Nutzer ihres Instituts, die au\u00DFer Ihnen das Jahrbuch bearbeiten d\u00FCrfen (optional)
 
 Yearbook_contextIds = Collections
@@ -1672,6 +1674,8 @@ Yearbook_organization = Organisation
 Yearbook_releaseYearbook = Jahrbuch abschlie\u00DFen
 
 Yearbook_removeFromYearbook = Auswahl aus dem Jahrbuch entfernen
+
+Yearbook_removeFromYearbookViewItem = Aus dem Jahrbuch entfernen
 
 Yearbook_title = Titel
 
