--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1656,6 +1656,8 @@ YearbookPage = Yearbook
 
 Yearbook_addToYearbook = Add selected to Yearbook
 
+Yearbook_addToYearbookViewItem = Add to Yearbook
+
 Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
 Yearbook_contextIds = Collections
@@ -1671,6 +1673,8 @@ Yearbook_organization = Organization
 Yearbook_releaseYearbook = Close Yearbook
 
 Yearbook_removeFromYearbook = Remove selected from Yearbook
+
+Yearbook_removeFromYearbookViewItem = Remove from Yearbook
 
 Yearbook_title = Title
 
