Former-commit-id: dbb821b066fabd3db289aabe564d52d83c3752ff

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1752,7 +1752,7 @@ adv_search_filePublicAvailable = \u00F6ffentlich zug\u00E4nglich
 
 adv_search_fileRestrictedAccess = Zugangsbeschr\u00E4nkung
 
-adv_search_lbHeaderCollection = Sammlung
+adv_search_lbHeaderCollection = Collection
 
 adv_search_lbHeaderContentDetails = Inhalt & Details
 
