--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -237,6 +237,8 @@ Yearbook_ReleasedSuccessfully = Jahrbuch wurde erfolgreich geschlossen.
 
 Yearbook_RemovedItemsFromYearbook = Datensatz/Datens\u00E4tze aus dem Jahrbuch entfernt
 
+Yearbook_allItemsValid = Alle Datens\u00E4tze sind valide.
+
 Yearbook_createdSuccessfully = Jahrbuch wurde erfolgreich erstellt und kann nun bef\u00FCllt werden
 
 Yearbook_creationError = Fehler beim Erstellen des Jahrbuchs. Bitte probieren Sie es sp\u00E4ter noch einmal oder kantaktieren Sie den Pubman Support.
