--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -237,6 +237,8 @@ Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
 Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
+Yearbook_allItemsValid = All Items are valid
+
 Yearbook_createdSuccessfully = Yearbook was created successfully and can now be filled with members
 
 Yearbook_creationError = Error while creating Yearbook. Please try again later or contact Pubman Support.
