Added label for iso639-3 browse by
Former-commit-id: 28ab704aecb463406cc74a433bd071670fcb2967

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2293,6 +2293,8 @@ info_lblMessageHeader = Systemnachrichten:
 
 informative_message = Informativ:
 
+iso6393Desc = Sprachcodes
+
 item_abstract = Zusammenfassung
 
 item_basic_label = Basisdaten
