--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2295,6 +2295,8 @@ info_lblMessageHeader = System Messages:
 
 informative_message = Informative:
 
+iso6393Desc = Language Codes
+
 item_abstract = Abstract
 
 item_basic_label = Basic
