--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -2227,6 +2227,8 @@ info_lblMessageHeader = System Messages:
 
 informative_message = Informativo:
 
+iso6393Desc = Language Codes
+
 item_abstract = Resumen
 
 item_basic_label = B\u00E1sico
