--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2260,6 +2260,8 @@ info_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8:
 
 informative_message = \u60C5\u5831:
 
+iso6393Desc = Language Codes
+
 item_abstract = \u8981\u65E8
 
 item_basic_label = \u57FA\u672C\u60C5\u5831
