Added new identifier type SSRN
Former-commit-id: 65dee49c7324883889d7d5c08a1952b611f2cba7

--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -424,6 +424,8 @@ ENUM_IDENTIFIERTYPE_PMID = PMID
 
 ENUM_IDENTIFIERTYPE_PND = PND
 
+ENUM_IDENTIFIERTYPE_SSRN = SSRN
+
 ENUM_IDENTIFIERTYPE_URI = URI
 
 ENUM_IDENTIFIERTYPE_URN = URN
